kubernetes/exemplo 2/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
        - name: node
          image: diegocbcastroo/node-pod-demo:1.0
          ports:
            - containerPort: 3000
