kubernetes/exemplo 2/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-ingress
spec:
  rules:
  - host: app.local
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
              service:
                name: node-service
                port:
                  number: 80
